added all hrefs

--- a/src/optimization.html
+++ b/src/optimization.html
@@ -13,9 +13,8 @@
     <section class="optimization">
 
         @@include('html/all-pages/breadcrumps.html',{
-        "pageSectionLink": "",
-        "pageSectionName": "Блог",
         "pageSectionLink": "blog.html",
+        "pageSectionName": "Блог",
         "pageCurrentName": "Как оптимизировать карточку товара для поиска",
         })
 
@@ -169,7 +168,9 @@
                     <p class="main-optimization-text">В оптимизации мета-тегов главное не переусердствовать с ключами.</p>
                 </div>
 
-                <button class="optimization-back">Вернуться назад <span class="optimization-back-btnVector">  &gt;</span></button>
+                <a class="optimization-back-href" href="blog.html">
+                    <button class="optimization-back">Вернуться назад <span class="optimization-back-btnVector">  &gt;</span></button>
+                </a>
             </div>
         </div>
 
