made new html with scss files for optimization code

--- a/src/blog.html
+++ b/src/blog.html
@@ -148,21 +148,7 @@
             </div>
         </div>
 
-
-        <button class="page-showMore">
-            <p class="page-showMore-arrow">&lt;</p>
-<!--            <img class="page-showMore-arrow" src="@img/icons/icons.svg#shapeMore" alt="shape"/>-->
-        </button>
-
-        <div class="blog-pagination">
-            <div class="blog-pagination-number">1</div>
-            <div class="blog-pagination-number">2</div>
-            <div class="blog-pagination-number">3</div>
-            <div class="blog-pagination-number">4</div>
-            <div class="blog-pagination-number">5</div>
-            <div class="blog-pagination-number">...</div>
-            <div class="blog-pagination-number">30</div>
-        </div>
+        @@include('html/all-pages/showMore.html',{})
 
     </section>
 </main>
