--- a/src/html/all-pages/header.html
+++ b/src/html/all-pages/header.html
@@ -12,6 +12,9 @@
       <a href="/about.html">
         <li class="header-menu-item">О нас</li>
       </a>
+      <a href="/specialists.html">
+        <li class="header-menu-item">Наши специалисты</li>
+      </a>
       <a href="/blog.html">
         <li class="header-menu-item">Блог</li>
       </a>
