--- a/src/html/home/first-screen.html
+++ b/src/html/home/first-screen.html
@@ -6,7 +6,9 @@
           <h2>Программирование проектов с нуля</h2>
           <h3>и поддержка существующих</h3>
         </div>
+        <a href="/services.html">
         <button class="first-screen-btn">Наши услуги</button>
+        </a>
         <img class="first-screen-img" src="@img/home/first-screen-balloon.png" />
       </div>
     </div>
