--- a/src/optimization.html
+++ b/src/optimization.html
@@ -43,17 +43,7 @@
                     </div>
                 </aside>
 
-                <aside class="connection-block">
-                    <img class="connection-block-img" src="@img/icons/icons.svg#Icon" alt="connection"/>
-                    <p class="connection-block-title">Мы на связи</p>
-                    <p class="connection-block-state">Наши специалисты ответят на любой интересующий вопрос по услуге</p>
-                    <button class="connection-block-btn">Задать вопрос<span class="connection-block-btnVector">  &gt;</span></button>
-                    <div class="connection-block-icons">
-                        <img class="connection-block-icon" src="@img/icons/icons.svg#call1" alt="call1"/>
-                        <img class="connection-block-icon" src="@img/icons/icons.svg#call2" alt="call2"/>
-                        <img class="connection-block-icon" src="@img/icons/icons.svg#call3" alt="call3"/>
-                    </div>
-                </aside>
+                @@include('html/all-pages/connectionBlock.html',{})
             </div>
 
             <div class="optimization-content">
