Specialists: made adaptive design. Changed some properties in file header.scss (logo img, block phone). added some classes in file styles.scss

--- a/src/html/all-pages/header.html
+++ b/src/html/all-pages/header.html
@@ -13,7 +13,7 @@
         <li class="header-menu-item">О нас</li>
       </a>
       <a href="/specialists.html">
-        <li class="header-menu-item">Наши специалисты</li>
+        <li class="header-menu-item">Cпециалисты</li>
       </a>
       <a href="/blog.html">
         <li class="header-menu-item">Блог</li>
