--- a/src/specialists.html
+++ b/src/specialists.html
@@ -23,68 +23,57 @@
             <p class="page-title">Наши специалисты</p>
 
             <div class="specialists-content">
-                <p class="specialists-content-title">Программисты</p>
-                <hr/>
+
+                <div class="specialists-content-titleBlock">
+                    <p class="specialists-content-title">Программисты</p>
+                    <img class="specialists-content-img" src="@img/icons/icons.svg#lineGrey" alt="line"/>
+                </div>
+
 
                 <div class="content-gallery">
                     <div class="content-gallery-item">
-                        <p class="gallery-item-name">Дарья
-                            Андреевна
-                            Лобан</p>
+                        <p class="gallery-item-name">Дарья Андреевна Лобан</p>
                         <img class="gallery-item-img" src="img/specialists/specialist1.png" alt="specialist1"/>
                     </div>
                     <div class="content-gallery-item">
-                        <p class="gallery-item-name">Валерия
-                            Юрьевна
-                            Цветкова</p>
+                        <p class="gallery-item-name">Валерия Юрьевна Цветкова</p>
                         <img class="gallery-item-img" src="img/specialists/specialist2.png" alt="specialist2"/>
                     </div>
                     <div class="content-gallery-item">
-                        <p class="gallery-item-name">Павел
-                            Александрович
-                            Прусак</p>
+                        <p class="gallery-item-name">Павел Александрович Прусак</p>
                         <img class="gallery-item-img" src="img/specialists/specialist3.png" alt="specialist3"/>
                     </div>
                     <div class="content-gallery-item">
-                        <p class="gallery-item-name">Иван
-                            Алексеевич
-                            Незнамокавов</p>
+                        <p class="gallery-item-name">Иван Алексеевич Незнамокавов</p>
                         <img class="gallery-item-img" src="img/specialists/specialist4.png" alt="specialist4"/>
                     </div>
                     <div class="content-gallery-item">
-                        <p class="gallery-item-name">Валерия
-                            Юрьевна
-                            Цветкова</p>
+                        <p class="gallery-item-name">Валерия Юрьевна Цветкова</p>
                         <img class="gallery-item-img" src="img/specialists/specialist2.png" alt="specialist2"/>
                     </div>
                     <div class="content-gallery-item">
-                        <p class="gallery-item-name">Дарья
-                            Андреевна
-                            Лобан</p>
+                        <p class="gallery-item-name">Дарья Андреевна Лобан</p>
                         <img class="gallery-item-img" src="img/specialists/specialist1.png" alt="specialist1"/>
                     </div>
                 </div>
 
-                <p>Дизайнеры</p>
-                <hr/>
+                <div class="specialists-content-titleBlock">
+                    <p class="specialists-content-title">Дизайнеры</p>
+                    <img class="specialists-content-img" src="@img/icons/icons.svg#lineGrey" alt="line"/>
+                </div>
+
 
                 <div class="content-gallery">
                     <div class="content-gallery-item">
-                        <p class="gallery-item-name">Дарья
-                            Андреевна
-                            Лобан</p>
+                        <p class="gallery-item-name">Дарья Андреевна Лобан</p>
                         <img class="gallery-item-img" src="img/specialists/specialist1.png" alt="specialist1"/>
                     </div>
                     <div class="content-gallery-item">
-                        <p class="gallery-item-name">Валерия
-                            Юрьевна
-                            Цветкова</p>
+                        <p class="gallery-item-name">Валерия Юрьевна Цветкова</p>
                         <img class="gallery-item-img" src="img/specialists/specialist2.png" alt="specialist2"/>
                     </div>
                     <div class="content-gallery-item">
-                        <p class="gallery-item-name">Павел
-                            Александрович
-                            Прусак</p>
+                        <p class="gallery-item-name">Павел Александрович Прусак</p>
                         <img class="gallery-item-img" src="img/specialists/specialist3.png" alt="specialist3"/>
                     </div>
 
@@ -102,5 +91,7 @@
 
     </section>
 </main>
+
+@@include('html/all-pages/footer.html',{})
 </body>
 </html>
