made new files for page plug. Plug: made design with adaptive

--- a/src/amocrm.html
+++ b/src/amocrm.html
@@ -21,11 +21,7 @@
 
         <p class="page-title container">amoCRM</p>
 
-        <div class="page-header">
-            <button class="page-blueBtn">Нужна консультация
-                <img class="page-blueBtn-arrow" src="@img/icons/icons.svg#arrowWhite" alt="arrow"/>
-            </button>
-        </div>
+        @@include('html/all-pages/headerConsultation.html',{})
 
         <div class="amocrm-description container">
             <p class="amocrm-description-text">Отличное решение для автоматизации вашего отдела продаж, который позволит не потерять ни одной заявки и мгновенно реагировать на них. Время – главный фактор качества общения с клиентами. Если вы отвечаете пользователю в течение 30 минут, то вы неплохо справляетесь, а если через неделю, то есть над чем работать.</p>
