--- a/src/analysis.html
+++ b/src/analysis.html
@@ -21,11 +21,7 @@
 
         <p class="page-title container">Анализ и оптимизация бизнес-процессов</p>
 
-        <div class="page-header">
-            <button class="page-blueBtn">Нужна консультация
-                <img class="page-blueBtn-arrow" src="@img/icons/icons.svg#arrowWhite" alt="arrow"/>
-            </button>
-        </div>
+        @@include('html/all-pages/headerConsultation.html',{})
 
         <div class="analysis-description container">Сертифицированные бизнес-разработчики проведут подробный бизнес-анализ вашей организации, найдут пути улучшения и соберут статистику по выполнению бизнес-процессов. В процессе решения задач бизнес анализа специалисты компании применяют методики мозгового штурма, сопоставительного анализа и интервьюирования, моделируют данные и процессы, выполняют анализ рисков, коренных причин и требований.</div>
 
@@ -120,7 +116,7 @@
         <div class="page-pros-container container">
             <p class="page-pros-title">Плюсы работы с нами</p>
 
-            <div class="page-pros-items">>
+            <div class="page-pros-items">
                 <div class="page-pros-item">
                     <svg class="svg-calendar" width="30" height="34">
                         <use href="#calendar"/>
