--- a/src/automation.html
+++ b/src/automation.html
@@ -20,11 +20,7 @@
 
         <p class="page-title container">Автоматизация бизнес-процессов</p>
 
-        <div class="page-header">
-            <button class="page-blueBtn">Нужна консультация
-                <img class="page-blueBtn-arrow" src="@img/icons/icons.svg#arrowWhite" alt="arrow"/>
-            </button>
-        </div>
+        @@include('html/all-pages/headerConsultation.html',{})
 
         <div class="automation-description container">Автоматизация и цифровизация бизнеса- это самое эффективное вложение в бизнес сегодня. В любом бизнесе сейчас собирается много данных и они открывают интересные перспективы для работы с клиентами и не только: можно совершать допродажи, сегментировать, планировать акции, менять ассортимент и прочее.Автоматизация упорядочивает, налаживает оперативную работу и управление задачами.</div>
 
