--- a/src/crm-implement.html
+++ b/src/crm-implement.html
@@ -21,11 +21,7 @@
 
         <p class="page-title container">Внедрение CRM</p>
 
-        <div class="page-header">
-            <button class="page-blueBtn">Нужна консультация
-                <img class="page-blueBtn-arrow" src="@img/icons/icons.svg#arrowWhite" alt="arrow"/>
-            </button>
-        </div>
+        @@include('html/all-pages/headerConsultation.html',{})
 
         <div class="crm-implement-bitrix">
             <div class="crm-implement-bitrix-container container">
