--- a/src/crm-support.html
+++ b/src/crm-support.html
@@ -20,11 +20,7 @@
 
         <p class="page-title container">Поддержка CRM</p>
 
-        <div class="page-header">
-            <button class="page-blueBtn">Нужна консультация
-                <img class="page-blueBtn-arrow" src="@img/icons/icons.svg#arrowWhite" alt="arrow"/>
-            </button>
-        </div>
+        @@include('html/all-pages/headerConsultation.html',{})
 
         <div class="crm-support-bitrix container">
             <p class="crm-support-bitrix-title">Развитие CRM</p>
