--- a/src/html/home/prefooter.html
+++ b/src/html/home/prefooter.html
@@ -1,13 +1,13 @@
 <section class="prefooter">
     <div class="prefooter-wrapper">
-        <div class="connection">
-            <div class="connection-container container">
+        <div class="prefooter-connection">
+            <div class="prefooter-connection-container container">
                 <img class="img-eyes" src="../../img/prefooter/image%2018.png" alt="eyes" />
-                <div class="connection-block">
-                    <span class="connection-title">Мы на связи:</span>
-                    <img class="connection-img img-telegramm" src="../../img/prefooter/call1.svg" alt="call1"/>
-                    <img class="connection-img img-whatsApp" src="../../img/prefooter/call2.svg" alt="call2"/>
-                    <img class="connection-img img-viber" src="../../img/prefooter/call3.svg" alt="call3"/>
+                <div class="prefooter-connection-block">
+                    <span class="prefooter-connection-title">Мы на связи:</span>
+                    <img class="prefooter-connection-img img-telegramm" src="../../img/prefooter/call1.svg" alt="call1"/>
+                    <img class="prefooter-connection-img img-whatsApp" src="../../img/prefooter/call2.svg" alt="call2"/>
+                    <img class="prefooter-connection-img img-viber" src="../../img/prefooter/call3.svg" alt="call3"/>
                 </div>
             </div>
         </div>
