--- a/src/mobile.html
+++ b/src/mobile.html
@@ -18,11 +18,7 @@
 
         <p class="page-title container">Разработка мобильных приложений и игр</p>
 
-        <div class="page-header">
-            <button class="page-blueBtn">Консультация
-                <img class="page-blueBtn-arrow" src="@img/icons/icons.svg#arrowWhite" alt="arrow"/>
-            </button>
-        </div>
+      @@include('html/all-pages/headerConsultation.html',{})
 
         <div class="mobile-description container">
             <p class="mobile-description-text">Разработаем мобильное приложение или игру от идеи до релиза и отладки баланса на базе ios и android с возможностями многопоточности и API. У нас есть команда специалистов, которые смогут превратить вашу идею в прибыльный бизнес.</p>
