--- a/src/html/all-pages/headerConsultation.html
+++ b/src/html/all-pages/headerConsultation.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+<div class="page-header">
+  <button class="page-blueBtn">Консультация
+    <img class="page-blueBtn-arrow" src="@img/icons/icons.svg#arrowWhite" alt="arrow"/>
+  </button>
+</div>
