made new files headerConsultation.html and .scss and changed some code for optimisation code

--- a/src/html/all-pages/headerConsultation.html
+++ b/src/html/all-pages/headerConsultation.html
@@ -1,4 +1,4 @@
-<div class="page-header">
+<div class="page-headerConsultation">
   <button class="page-blueBtn">Консультация
     <img class="page-blueBtn-arrow" src="@img/icons/icons.svg#arrowWhite" alt="arrow"/>
   </button>
