deleted in some scss files property .phone{ display: none}, but added him in file style.scss

--- a/src/html/all-pages/headerConsultation.html
+++ b/src/html/all-pages/headerConsultation.html
@@ -1,5 +1,5 @@
 <div class="page-headerConsultation">
-  <button class="page-blueBtn">Консультация
-    <img class="page-blueBtn-arrow" src="@img/icons/icons.svg#arrowWhite" alt="arrow"/>
+  <button class="page-headerConsultation-blueBtn">Консультация
+    <img class="page-headerConsultation-blueBtn-arrow" src="@img/icons/icons.svg#arrowWhite" alt="arrow"/>
   </button>
 </div>
