made adaptive design fifth-screen. and second-screen for 1024px

--- a/src/html/home/fifth-screen.html
+++ b/src/html/home/fifth-screen.html
@@ -2,7 +2,7 @@
     <div class="fifth-screen-inner appeal-inner">
         <div class="fifth-screen-wrapper">
             <div class="fifth-screen-subtitle">
-                <li><span>О КОМПАНИИ</span></li>
+                <li><span>О компании</span></li>
             </div>
             <p class="fifth-screen-tagline">
                 За 12 лет на рынке мы построили свои бизнес-процессы в Битрикс24, чтобы быстро решать потребности ваших сайтов.
