Pluses.scss: made this file, added him in styles.scss for optimization code and deleted some code in some scss files

--- a/src/support.html
+++ b/src/support.html
@@ -59,7 +59,7 @@
         <div class="page-pros">
             <div class="page-pros-container container">
                 <p class="page-pros-title">Плюсы работы с нами</p>
-                <div class="page-pros-block">
+                <div class="page-pros-items">
                     <div class="page-pros-item">
                         <svg class="svg-qualification"  width="40" height="28">
                             <use href="#qualification"/>
