deleted in scss files property clsasss .page-tittle for optimization code. This property is localed in style.scss

--- a/src/mobile.html
+++ b/src/mobile.html
@@ -199,7 +199,7 @@
         <div class="page-pros phone">
             <div class="page-pros-container container">
                 <p class="page-pros-title">Плюсы работы с нами</p>
-                <div class="page-pros-block">
+                <div class="page-pros-items">
                     <div class="page-pros-item">
                         <img class="pros-item-img" src="@img/icons/icons.svg#qualification" alt="qualification"/>
                         <p class="pros-item-header">Квалификация</p>
